[package]
name = "avm1-emitter"
version = "0.14.0"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "AVM1 emitter"
documentation = "https://docs.rs/avm1-emitter"
homepage = "https://github.com/open-flash/avm1-emitter"
repository = "https://github.com/open-flash/avm1-emitter"
readme = "./README.md"
keywords = ["emitter", "swf", "flash", "avm1"]
license = "AGPL-3.0-or-later"
edition = "2021"
rust-version = "1.60.0"

[lib]
name = "avm1_emitter"
path = "src/lib.rs"

[dependencies]
byteorder = "1.4.3"
half = "2.0.0"
avm1-types = "0.14.0"
swf-fixed = "0.1.5"
drop_bomb = "0.1.5"

[dev-dependencies]
serde = "1.0.137"
serde_json_v8 = "0.1.1"
avm1-parser = "0.14.0"
test-generator = "0.3.0"

# When testing larger files, increasing `opt-level` provides a significant speed-up.
# [profile.test]
# opt-level = 2

[workspace]
members = ["bin"]
